--- a/GoFPatterns/GoFPatterns.csproj
+++ b/GoFPatterns/GoFPatterns.csproj
@@ -5,4 +5,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Act\State\" />
+    <Folder Include="Generate\" />
+    <Folder Include="Struct\" />
+    <Folder Include="Act\" />
+  </ItemGroup>
+
 </Project>
